--- a/magicXform/README.org
+++ b/magicXform/README.org
@@ -8,11 +8,16 @@
 
 * TABLE OF CONTENTS :toc:
 - [[#introduction][Introduction]]
-- [[#initial-point][Initial point]]
-  - [[#imports-and-dependencies][Imports and dependencies]]
-  - [[#terminal-arguments-parser][Terminal arguments parser]]
-  - [[#logo][Logo]]
-  - [[#helper-functions][Helper functions]]
+- [[#imports-and-dependencies][Imports and dependencies]]
+- [[#terminal-arguments-parser][Terminal arguments parser]]
+- [[#logo][Logo]]
+- [[#helper-functions][Helper functions]]
+  - [[#utils][Utils]]
+  - [[#prof-util-functions-for-expressions][Prof util functions for expressions]]
+  - [[#problem-parser-functions][Problem parser functions]]
+  - [[#find-magic-numbers][Find magic numbers]]
+  - [[#benchmark-rewriter][Benchmark rewriter]]
+  - [[#initial-rule][Initial rule]]
 - [[#mxf-techniques][mXf techniques]]
   - [[#substitution-technique][Substitution technique]]
   - [[#range-technique][Range technique]]
@@ -28,8 +33,7 @@
 * Introduction
 This is an introduction to my Python code.
 
-* Initial point
-** Imports and dependencies
+* Imports and dependencies
 I use `sys` module to import z3 properly from a path that locates in `secrets.py` file. In such way I can manually change z3 version and try to solve benchmark using concrete z3 version
 
   #+BEGIN_SRC python
@@ -49,7 +53,7 @@ z3.set_param(model=True)
 
 #+END_SRC
 
-** Terminal arguments parser
+* Terminal arguments parser
 #+BEGIN_SRC python
 parser = argparse.ArgumentParser(description="A script to process problem and result files")
 
@@ -64,15 +68,15 @@ parser.add_argument('--ver', default="1", help="Indicate version of the tool: 1 
 
 - See the =help= for getting more information
 - --ver is for choosing version of the tool. In total I have 5 versions:
-**** 1 - Substitution technique
+*** 1 - Substitution technique
 Takes a benchmark, finds all magic numbers using it's parser (further in the file). Provides a variable for each magic number, add them to the initial rule and substitutes those numbers with variables.
-**** 2 - Range technique
+*** 2 - Range technique
 Finds magic numbers and provides variables, but variables is in range between 1 and corresponing magic number (0 < var < magicNumber)
-**** TODO 3 Parametrization
-**** TODO 4 PaRanga
-**** TODO 5 Combination
+*** TODO 3 Parametrization
+*** TODO 4 PaRanga
+*** TODO 5 Combination
 
-** Logo
+* Logo
 Prints logo just to show that script is actually working (and cool as well 😎)
 
 #+begin_src python
@@ -88,8 +92,8 @@ print(ascii_art)
 
 #+end_src
 
-** Helper functions
-*** Utils
+* Helper functions
+** Utils
 #+begin_src python
 Z = z3.IntSort()
 B = z3.BoolSort()
@@ -119,7 +123,7 @@ def flatten(lst):
     return result
 #+end_src
 
-*** Prof util functions for expressions
+** Prof util functions for expressions
 #+begin_src python
 def expand_quant(fml):
     """Expand quantifier into Quantifier, Variables, and Body."""
@@ -139,7 +143,7 @@ def apply_to_each_expr(fml, fn, *args, **kwargs):
 
 #+end_src
 
-*** Problem parser functions
+** Problem parser functions
 #+begin_src python
 def setup_fixedpoint(max_depth):
     fp = z3.Fixedpoint()
@@ -155,7 +159,7 @@ def extract_rules(fp):
     return fp.get_rules()
 #+end_src
 
-*** Find magic numbers
+** Find magic numbers
 Following functions try to find a magic number in following cases:
 1. If expression has a comparison sign (i.e <,<=, >=, >,=, !=)
 2. Is non-zero integer
@@ -205,7 +209,7 @@ def find_magic_values(rules):
     return list(set().union(*map(find_magic_in_rule, rules)))
 #+end_src
 
-*** Benchmark rewriter
+** Benchmark rewriter
 Functions that do the trick.
 Core functions:
 - =apply_substitution= - makes plain substitution. Replace all numbers with variables in all rules
@@ -258,8 +262,8 @@ def generate_additional_conditions(substitutions):
     return [(sub_var == sub_val) for sub_val, sub_var in substitutions]
 #+END_SRC
 
-*** Initial rule
-**** Constructing
+** Initial rule
+*** Constructing
 #+BEGIN_SRC python
 def implies_and_way(rule_body, additional_conditions):
     assert(z3.is_implies(rule_body))
@@ -284,8 +288,7 @@ def construct_first_rule(rule_body, additional_conditions):
         return rule_body, clear_inv_way(additional_conditions)
 #+END_SRC
 
-#+NAME: new rules generation
-**** Processing
+*** Processing
 The idea of processing initial(first) rule separately came to my head when one of the benchmarks performed worse timing in finding of the invariant. Since then I implemented a separate function for this behavior.
 
 #+BEGIN_SRC python
@@ -339,13 +342,13 @@ The idea focuses on the application of a substitution technique that establishes
 
 
 Workflow:
-- First of all we search for all magic numbers in the rules using =find_magic_values(rules[1:])=. We don't want to catch magic numbers in the initial (first) rule because they are already assigned to some variable and providing a new variable potentially can lead to slowing down the solver. See [[Find magic numbers]] chapter to learn more.
+- First of all we search for all magic numbers in the rules using =find_magic_values(rules[1:])=. We don't want to catch magic numbers in the initial (first) rule because they are already assigned to some variable and providing a new variable potentially can lead to slowing down the solver. See [[#find-magic-numbers][Find magic numbers]] chapter to learn more.
 
 - Next, we =prepare_substitution= for all found magic numbers, meaning we define new variables that correspond to its value using some prefix, in our case =K=, and a list with pairs that should be substituted in the benchmark (i.e [(5, K5), (10, K10)].
 
 - Application of substitution is the main part of this snippet: custom substitution is basically making substitutions in all rules except the first one. The first rule is ignored again because it slows down the solver and can make unnecessary relations between numbers that shouldn't correlate. In other rules, we just make changes where were numbers and return updated rules.
 
-- =additional_conditions= stable that same relation between variables and magic numbers just putting them in the initial rule in addition to existing constraints. See substitution functions at [[Benchmark rewrite functions]].
+- =additional_conditions= stable that same relation between variables and magic numbers just putting them in the initial rule in addition to existing constraints. See substitution functions at [[#benchmark-rewriter][Benchmark rewriter]].
 
 #+BEGIN_SRC python
 def process_first_version(rules):
@@ -361,13 +364,13 @@ The idea is to focus on the identification of magic numbers, substituting them w
 
 
 Workflow:
-- First of all, we search for all magic numbers in the rules using =find_magic_values(rules[1:])=. We don't want to catch magic numbers in the initial (first) rule because they are already assigned to some variable and providing a new variable potentially can lead to slowing down the solver. See [[Find magic numbers]] chapter to learn more.
+- First of all, we search for all magic numbers in the rules using =find_magic_values(rules[1:])=. We don't want to catch magic numbers in the initial (first) rule because they are already assigned to some variable and providing a new variable potentially can lead to slowing down the solver. See [[#find-magic-numbers][Find magic numbers]] chapter to learn more.
 
-- Generation of additional constraints to initial rule that provides variables in range 0 < var <= magic_number (i.e (and (> A 0) (<= A 42))). See new rule [[Processing]].
+- Generation of additional constraints to initial rule that provides variables in range 0 < var <= magic_number (i.e (and (> A 0) (<= A 42))). See new rule [[#processing][Processing]].
 
 - Application of substitution is the main part of this snippet: custom substitution is basically making substitutions in all rules except the first one. The first rule is ignored again because it slows down the solver and can make unnecessary relations between numbers that shouldn't correlate. In other rules, we just make changes where were numbers and return updated rules.
 
-- =additional_conditions= stable that same relation between variables and magic numbers just putting them in the initial rule in addition to existing constraints. See substitution functions at [[Benchmark rewrite functions]].
+- =additional_conditions= stable that same relation between variables and magic numbers just putting them in the initial rule in addition to existing constraints. See substitution functions at .
 
 #+BEGIN_SRC python
 def process_second_version(rules):
